--- a/storefront/Dockerfile
+++ b/storefront/Dockerfile
@@ -2,11 +2,11 @@ FROM node:latest
 
 WORKDIR /app/storefront
 
-COPY ["package.json", "package-lock.json", "./"]
+COPY . .
+
+RUN rm -rf node_modules
 
 RUN apt-get update
-
-# RUN apt-get install -y libvips-dev libglib2.0-dev gcc g++ make
 
 RUN npm install -g npm@latest
 
@@ -16,9 +16,6 @@ RUN npm install sharp
 
 RUN npm install --loglevel=error
 
-# copy the whole source folder(the dir is relative to the Dockerfile
-COPY . .
-
 RUN npm run build &> /dev/null
 
-CMD [ "gatsby", "develop", "-H", "0.0.0.0",  "-p", "7000" ]
+ENTRYPOINT ["./develop.sh" ]
