storefront development update

--- a/storefront/Dockerfile
+++ b/storefront/Dockerfile
@@ -2,6 +2,10 @@ FROM node:latest
 
 WORKDIR /app/storefront
 
+COPY . .
+
+RUN rm -rf node_modules
+
 RUN apt-get update
 
 RUN npm install -g npm@latest
@@ -10,4 +14,6 @@ RUN npm install -g gatsby-cli
 
 RUN npm install sharp
 
-ENTRYPOINT ["./develop.sh" ]
+RUN npm install --loglevel=error
+
+ENTRYPOINT ["gatsby", "develop", "-H", "0.0.0.0", "-p", "8000" ]
