--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,11 +6,19 @@ services:
     volumes:
       - ./backend:/app/medusa
       - backend_node_modules:/app/medusa/node_modules
+    ports:
+      - "9000:9000"
+
+  admin:
+    ports:
+      - "7000:7000"
 
   storefront:
     volumes:
       - ./storefront:/app/storefront
       - storefront_node_modules:/app/storefront/node_modules
+    ports:
+      - "8000:8000"
 
 volumes:
   storefront_node_modules:
